--- a/Dev-Blog/Dev-Blog/Pages/About/About.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/About/About.cshtml
@@ -40,18 +40,19 @@
                             <li>Learning Sharks - 7 months</li>
                         </ul>
 
-                        <h4>Interests</h4>
-                        <ul>
-                            <li>Gaming</li>
-                            <li>Programming</li>
-                            <li>Hiking / Camping</li>
-                        </ul>
-
                         <h4>Programming</h4>
                         <ul>
                             <li>C# / ASP.NET Core</li>
                             <li>JavaScript</li>
+                            <li>PowerShell</li>
                             <li>Unity</li>
+                        </ul>
+
+                        <h4>Interests</h4>
+                        <ul>
+                            <li>Gaming (ROASTxBEEF77)</li>
+                            <li>Programming</li>
+                            <li>Hiking / Camping</li>
                         </ul>
 
                         <!-- Github & LinkedIn links -->
