--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -19,7 +19,7 @@
                     <!-- Latest Post -->
                 <div class="card-header">
                     <span>
-                        TEST
+                        Update
                         <strong>@Model.Post.UpdateNum</strong>
                     </span>
                     <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
@@ -35,7 +35,7 @@
                     @*<iframe class="embed-responsive-item" src="#"></iframe>*@
                     <img class="embed-responsive-item" />
                     <h2>
-                        YouTube Channel
+                        YouTube TEST
                         <br /><br />
                         Coming Soon
                     </h2>
