--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -35,7 +35,7 @@
                     @*<iframe class="embed-responsive-item" src="#"></iframe>*@
                     <img class="embed-responsive-item" />
                     <h2>
-                        YouTube TEST
+                        YouTube ANOTHER TEST
                         <br /><br />
                         Coming Soon
                     </h2>
