--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -17,25 +17,25 @@
                 @if (Model.Post != null)
                 {
                     <!-- Latest Post -->
-                <div class="card-header">
-                    <span>
-                        Update
-                        <strong>@Model.Post.UpdateNum</strong>
-                    </span>
-                    <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
-                </div>
-                <div class="card-body text-center">
-                    <img id="update-img" class="update-img" src=@Model.Post.ImgURL />
-                    <p class="post-description">@Model.Post.Description</p>
+                    <div class="card-header">
+                        <span>
+                            Update
+                            <strong>@Model.Post.UpdateNum</strong>
+                        </span>
+                        <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
+                    </div>
+                    <div class="card-body text-center">
+                        <img id="update-img" class="update-img" src=@Model.Post.ImgURL />
+                        <p class="post-description">@Model.Post.Description</p>
 
-                    <hr />
-                </div>
+                        <hr />
+                    </div>
                 }
                 <div youtube class="m-auto embed-responsive-16by9 embed-responsive">
                     @*<iframe class="embed-responsive-item" src="#"></iframe>*@
                     <img class="embed-responsive-item" />
                     <h2>
-                        YouTube ANOTHER TEST
+                        YouTube Channel
                         <br /><br />
                         Coming Soon
                     </h2>
