--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -6,8 +6,7 @@
 }
 
 <head>
-    <link rel="stylesheet" type="text/css" href="~/css/Home.css" />
-
+    <link rel="stylesheet" type="text/css" href="~/css/home.css" />
     <title>Home</title>
 </head>
 <body id="bootstrap-override">
