--- a/Dev-Blog/Dev-Blog/Pages/Account/_Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Login.cshtml
@@ -19,7 +19,7 @@
                     <div asp-validation-summary="All" class="error-message"></div>
                     <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
                     <h5>Password</h5>
-                    <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
+                    <input type="password" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
                     <button class="btn btn-block my-4" type="submit" asp-page-handler="Login">Sign in</button>
                 </form>
             </div>
