--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -17,14 +17,14 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-                <form class="text-center p-5" method="post">
-                    <h5>UserName</h5>
+                <form register class="text-center p-5" method="post">
                     <div id="validation" asp-validation-summary="All" class="error-message"></div>
+                    <h5>UserName</h5>
                     <input id="userNameInput" type="text" maxlength="25" class="form-control mb-4" placeholder="UserName" pattern="^[a-zA-Z0-9]+$" title="Username can only contain letters and digits" asp-for="@Model.UserName">
                     <h5>Email</h5>
                     <input id="emailInput" type="email" class="form-control mb-4" placeholder="Email" asp-for="@Model.Email" />
                     <h5>Password</h5>
-                    <input type="password" maxlength="35" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Password must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" asp-for="@Model.Password">
+                    <input type="password" maxlength="35" class="form-control mb-4" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Password must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" asp-for="@Model.Password">
                     <input type="password" maxlength="35" class="form-control mb-4" placeholder="Confirm Password" asp-for="@Model.ConfirmPassword" />
                     <button id="registerBtn" class="btn btn-block my-4" type="submit" asp-page-handler="Register">Sign Up</button>
                 </form>
@@ -39,45 +39,47 @@
     $(document).ready(function () {
 
         $("#registerBtn").on("click", function (e) {
+            $('li[validate]').remove();
 
             var ValidateVM = {
                 UserName: $("#userNameInput").val(),
                 Email: $("#emailInput").val()
             };
 
-            $.ajax({
-                contentType: "application/json; charset=utf-8",
-                type: "POST",
-                url: '@Url.Action("Validate", "Validator")',
-                data: JSON.stringify(ValidateVM),
-                dataType: "json",
-                async: true,
-                success: function (data) {
-                    console.log("Success");
-                    console.log(data);
-                    var isValid = true;
+            var isValid = function () {
+                var valid;
+                $.ajax({
+                    contentType: "application/json; charset=utf-8",
+                    type: "POST",
+                    url: '@Url.Action("Validate", "Validator")',
+                    data: JSON.stringify(ValidateVM),
+                    dataType: "json",
+                    async: false,
+                    success: function (data) {
+                        console.log("SUCCESS");
 
-                    // only run validateEmail() if the email is not null
-                    if (ValidateVM.UserName != null) isValid = validateEmail(data[0]);
+                        if (data[1] == "True") validateUserName(data[1]);
+                        if (data[0] == "True") validateEmail(data[0]);
 
-                    // only run validateUserName() if the username is not null
-                    if (ValidateVM.Email != null) isValid = validateUserName(data[1]);
+                        if (data[0] == "True" || data[1] == "True") valid = false;
+                        else valid = true;
 
-                    if (isValid) e.preventDefault();
-                    else $("#registerBtn").submit();
+                    },
+                    error: function () {
+                        console.log("ERROR");
+                    }
+                });
+                return valid;
+            }();
 
-                },
-                error: function () {
-                    console.log("ERROR");
-                }
-            });
+            if (!isValid) e.preventDefault();
         });
 
         // function to display error message if email is already registered
         var validateEmail = function (email) {
             if (email) {
-                $("#validation ul").append(
-                    $('<li>email already registered</li>')
+                $("#validation ul").before(
+                    $('<li validate>email already registered</li>')
                 );
                 return false;
             }
@@ -86,8 +88,8 @@
         // function to display error if username is already taken
         var validateUserName = function (username) {
             if (username) {
-                $("#validation ul").append(
-                    $('<li>username taken</li>')
+                $("#validation ul").before(
+                    $('<li validate>username taken</li>')
                 );
                 return false;
             }
