--- a/Dev-Blog/Dev-Blog/wwwroot/css/About.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/About.css
@@ -59,3 +59,9 @@ div[creatorDescription] img {
         text-align: center;
     }
 }
+
+@media screen and (max-width: 475px) {
+    div[creatorDescription] img {
+        width: 100%;
+    }
+}
