--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Layout.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     @{ await Html.RenderPartialAsync("_Header");}
     @RenderBody()
-    @{ await Html.RenderPartialAsync("_Footer");}z
+    @{ await Html.RenderPartialAsync("_Footer");}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
