--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -98,15 +98,15 @@
                                             <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
 
                                             <!--Delete Comment Button-->
-                                            <form method="post" class="delete-form">
-                                                @if (User.Identity.Name == Model.AdminUser)
-                                                {
+                                            @if (User.Identity.Name == Model.AdminUser)
+                                            {
+                                                <form method="post" class="delete-form">
                                                     <input hidden asp-for=@comment.Id>
                                                     <button type="submit" asp-page-handler="DeleteComment">
                                                         @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
                                                     </button>
-                                                }
-                                            </form>
+                                                </form>
+                                            }
                                         </div>
                                         <p>@comment.Content</p>
                                     </div>
@@ -239,15 +239,14 @@
             // new comment to render to page
             var renderComment = function (comment, date, idx) {
                 $(`#form${idx}`).before(
-                    $(`<div comment class="posted-comments comment-box">` +
-                        `<span class="glyphicon glyphicon-user user-icon"></span>` +
-                        `<span class="comment-username">${comment.UserName}</span>` +
-                        `<div class="float-right">` +
-                        `<span>${date}</span>` +
-                        `</div>` +
-                        `<p>${comment.Content}</p>` +
-                        `</div>`
-                    )
+                    $(`<div comment class="posted-comments comment-box">`+
+                      `<span class="glyphicon glyphicon-user user-icon"></span>`+
+                      `<span class="comment-username">${comment.UserName}</span>`+
+                      `<div class="float-right">`+
+                      `<span>${date}</span>`+
+                      `</div>` +
+                      `<p>${comment.Content}</p>`+
+                      `</div>`)
                 );
             }
         });
