--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -34,9 +34,11 @@
                     @*<iframe class="embed-responsive-item" src="#"></iframe>*@
                     <img class="embed-responsive-item" />
                     <h2>
-                        YouTube Channel
+                        @*YouTube Channel*@
+                        THIS iS A
                         <br /><br />
-                        Coming Soon
+                        @*Coming Soon*@
+                        TEST
                     </h2>
                 </div>
                 <!--Suggestion Box-->
