--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -34,6 +34,7 @@
                     @*<iframe class="embed-responsive-item" src="#"></iframe>*@
                     <img class="embed-responsive-item" />
                     <h2>
+                        @*TEST*@
                         YouTube Channel
                         <br /><br />
                         Coming Soon
