--- a/Dev-Blog/Dev-Blog/Pages/Unsubscribe/Success.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Unsubscribe/Success.cshtml
@@ -11,5 +11,5 @@
     <title>Unsubscribe</title>
 </head>
 <body id="bootstrap-override">
-    <h3>You are now unsubscribed :(</h3>
+    <h3 unsub>You are now unsubscribed :(</h3>
 </body>
