Add new server project.

--- a/Dev-Blog/DevBlog_BlazorServer/Pages/FetchData.razor
+++ b/Dev-Blog/DevBlog_BlazorServer/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using Dev_Blog_Server_5._0.Data
+@using DevBlog_BlazorServer.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
