--- a/Dev-Blog/DevBlog_BlazorServer/Shared/NavMenu.razor.css
+++ b/Dev-Blog/DevBlog_BlazorServer/Shared/NavMenu.razor.css
@@ -1,4 +1,44 @@
-.navbar-toggler {
+nav {
+    font-family: 'Press Start 2P', cursive;
+}
+
+#bootstrap-override #logout-button {
+    border: none;
+    background-color: inherit;
+}
+
+ul[navUL] {
+    width: 100%;
+}
+
+    ul[navUL] > li {
+        display: inline-block;
+    }
+
+li[rightLi] {
+    margin-left: auto;
+}
+
+    li[rightLi]:first-child {
+        text-align: right;
+    }
+
+@media screen and (max-width: 1200px) {
+    li[rightLi] {
+        text-align: left;
+        margin-left: 0;
+    }
+}
+
+main {
+    margin-bottom: 125px;
+}
+
+ul[navUL] > li:hover {
+    cursor: pointer;
+}
+
+/*.navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -55,8 +95,8 @@
         display: none;
     }
 
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
+    .collapse {*/
+/* Never collapse the sidebar for wide screens */
+/*display: block;
     }
-}
+}*/
