--- a/Dev-Blog/DevBlog_BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/DevBlog_BlazorServer/Pages/_Host.cshtml
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="DevBlog_BlazorServer.styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
