--- a/Dev-Blog/DevBlog_BlazorServer/Pages/Index.razor
+++ b/Dev-Blog/DevBlog_BlazorServer/Pages/Index.razor
@@ -1,3 +1,28 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@using DevBlog_BlazorServer.Models
+@using Microsoft.Extensions.Configuration
+@inject DataLibrary.Interfaces.IDataAccess _data
+@inject IConfiguration _config
+
+<h1>HOME</h1>
+
+<div style="margin-top: 20px; border: 2px solid red;">
+    <p>@latestPost.UpdateNum</p>
+    <p>@latestPost.Date.ToShortDateString()</p>
+    <img src=@latestPost.ImgURL />
+    <p>@latestPost.Description</p>
+    <button class="glyphicon glyphicon-thumbs-up"></button>
+    <span>@latestPost.UpVotes</span>
+    <button class="glyphicon glyphicon-thumbs-down"></button>
+    <span>@latestPost.DownVotes</span>
+</div>
+
+@code {
+    PostModel latestPost;
+
+    protected override async Task OnInitializedAsync()
+    {
+        latestPost = await _data.GetLatest<PostModel>("post", _config.GetConnectionString("DevBlogDB"));
+    }
+}
