--- a/Dev-Blog/DevBlog_BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/DevBlog_BlazorServer/Pages/_Host.cshtml
@@ -12,10 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevBlog_BlazorServer</title>
     <base href="~/" />
+    <link href="css/Reset.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="DevBlog_BlazorServer.styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
